--- a/run_params.env
+++ b/run_params.env
@@ -1,11 +1,13 @@
 DATASET=ts
-MODEL_DEPTH=d12
+MODEL_DEPTH=d2
 BATCH_SIZE=4
-TOTAL_BATCH_SIZE=4096
+TOTAL_BATCH_SIZE=256
 TRAIN_STEPS=100
 EVAL_EVERY=40
 SAVE_EVERY=40
-MID_STEPS=100
-MID_EVAL_EVERY=40
-SFT_STEPS=100
-SFT_EVAL_EVERY=40
+CKPT_DIR=./ckps
+MID_STEPS=10
+MID_EVAL_EVERY=10
+SFT_STEPS=10
+SFT_EVAL_EVERY=10
+BUCKET="aq-ds"
