--- a/run_params_multi.env
+++ b/run_params_multi.env
@@ -1,5 +1,4 @@
-RUN_ID=130
-DATASET=ts
+DATASET=fw
 MODEL_DEPTH=d20
 BATCH_SIZE=16
 TOTAL_BATCH_SIZE=524288
@@ -7,3 +6,4 @@ TRAIN_STEPS=20000
 EVAL_EVERY=500
 SAVE_EVERY=500
 BUCKET="aq-ds"
+RUN_ID=130
