--- a/run_params.env
+++ b/run_params.env
@@ -1,13 +1,12 @@
-DATASET=ts
-MODEL_DEPTH=d2
-BATCH_SIZE=4
-TOTAL_BATCH_SIZE=256
-TRAIN_STEPS=100
-EVAL_EVERY=40
-SAVE_EVERY=40
-CKPT_DIR=./ckps
-MID_STEPS=10
-MID_EVAL_EVERY=10
-SFT_STEPS=10
-SFT_EVAL_EVERY=10
+DATASET=fw
+MODEL_DEPTH=d20
+BATCH_SIZE=8
+TOTAL_BATCH_SIZE=524288
+TRAIN_STEPS=20000
+EVAL_EVERY=500
+SAVE_EVERY=500
+MID_STEPS=1000
+MID_EVAL_EVERY=100
+SFT_STEPS=1000
+SFT_EVAL_EVERY=100
 BUCKET="aq-ds"
