improving ablations infra

--- a/params/run_params_local.env
+++ b/params/run_params_local.env
@@ -3,9 +3,12 @@ MODEL_DEPTH=d12
 BATCH_SIZE=4
 TOTAL_BATCH_SIZE=4096
 TRAIN_STEPS=10
-EVAL_EVERY=5
-SAVE_EVERY=5
+EVAL_EVERY=-1
+SAVE_EVERY=-1
+
 MID_STEPS=10
-MID_EVAL_EVERY=5
+MID_EVAL_EVERY=-1
+
 SFT_STEPS=10
-SFT_EVAL_EVERY=5
+SFT_EXAMPLES_PER_STEP=8
+SFT_EVAL_EVERY=-1
