--- a/params/run_params.env
+++ b/params/run_params.env
@@ -5,8 +5,12 @@ TOTAL_BATCH_SIZE=524288
 TRAIN_STEPS=20000
 EVAL_EVERY=500
 SAVE_EVERY=500
+
 MID_STEPS=1000
 MID_EVAL_EVERY=100
+
 SFT_STEPS=1000
 SFT_EVAL_EVERY=100
+SFT_EXAMPLES_PER_STEP=32
+
 BUCKET="aq-ds"
